2003-08-05  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (COB_WRITE_MASK, COB_WRITE_LINES, COB_WRITE_PAGE)
	(COB_WRITE_AFTER, COB_WRITE_BEFORE): New macros.
	* fileio.h, fileio.c (cob_write_page, cob_write_lines): Removed.
	(cob_write): Take third argument.
	* fileio.c (file_write_opt): New function.
	(FILE_WRITE_AFTER, FILE_WRITE_BEFORE): New macros.

2003-07-28  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_exception): Removed.

2003-06-29  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h, fileio.c (cob_sort_init): Removed the 3rd argument.
	(cob_sort_init_key): New function.

2003-06-28  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_cmp_result): Removed.

2003-06-25  Keisuke Nishida  <knishida@netlab.jp>

	* termio.c (cob_accept): Do not use readline.

2003-06-19  Keisuke Nishida  <knishida@netlab.jp>

	* common.c, common.h (cob_check_odo): New function.
	(cob_check_subscript_depending): Removed.

2003-06-18  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c (relative_rewrite): Refer to the relative key unless
	the access mode is sequential.

2003-06-12  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c (SEEK_INIT): New macro.

2003-06-07  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.c, numeric.h: No longer use gmp.
	(cob_decimal_init, cob_decimal_clear): Removed.

2003-06-07  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_module): New member `collating_sequence'.
	* common.c (CMP): New macro.
	(cmp_char, cmp_all, cmp_alnum): Use CMP.

2003-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_switch): Removed.
	* common.c (cob_set_switch, cob_get_switch): New function.

2003-05-27  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_module): Renamed from cob_environment.
	(cob_current_module): Renamed from cob_env.
	(cob_module_enter): Renamed from cob_push_environment.
	(cob_module_leave): Renamed from cob_pop_environment.
	(cob_module_init): Removed.