@@ -233,10 +233,10 @@ cob_decimal_get_display (cob_decimal *d, cob_field *f)
   return 0;
 }
 
-/* BINARY */
+/* NATIVE */
 
 static void
-cob_decimal_set_binary (cob_decimal *d, cob_field *f)
+cob_decimal_set_native (cob_decimal *d, cob_field *f)
 {
   switch (f->size)
     {
@@ -256,7 +256,7 @@ cob_decimal_set_binary (cob_decimal *d, cob_field *f)
 }
 
 static int
-cob_decimal_get_binary (cob_decimal *d, cob_field *f)
+cob_decimal_get_native (cob_decimal *d, cob_field *f)
 {
   int digits = f->attr->digits;
   if (f->size <= 4)
@@ -304,6 +304,25 @@ cob_decimal_get_binary (cob_decimal *d, cob_field *f)
   return cob_exception_code;
 }
 
+/* BINARY */
+
+static void
+cob_decimal_set_binary (cob_decimal *d, cob_field *f)
+{
+  cob_binary_convert (f);
+  cob_decimal_set_native (d, f);
+  cob_binary_convert (f);
+}
+
+static int
+cob_decimal_get_binary (cob_decimal *d, cob_field *f)
+{
+  int ret = cob_decimal_get_native (d, f);
+  if (ret == 0)
+    cob_binary_convert (f);
+  return ret;
+}
+
 /* PACKED-DECIMAL */
 
 static void
@@ -342,6 +361,9 @@ cob_decimal_set_field (cob_decimal *d, cob_field *f)
     case COB_TYPE_NUMERIC_BINARY:
       cob_decimal_set_binary (d, f);
       break;
+    case COB_TYPE_NUMERIC_NATIVE:
+      cob_decimal_set_native (d, f);
+      break;
     case COB_TYPE_NUMERIC_PACKED:
       cob_decimal_set_packed (d, f);
       break;
@@ -377,6 +399,8 @@ cob_decimal_get_field (cob_decimal *d, cob_field *f)
       return cob_decimal_get_display (d, f);
     case COB_TYPE_NUMERIC_BINARY:
       return cob_decimal_get_binary (d, f);
+    case COB_TYPE_NUMERIC_NATIVE:
+      return cob_decimal_get_native (d, f);
     default:
       {
 	cob_field_attr attr = {
@@ -712,6 +736,7 @@ cob_add_int (cob_field *f, int n)
   switch (COB_FIELD_TYPE (f))
     {
     case COB_TYPE_NUMERIC_BINARY:
+    case COB_TYPE_NUMERIC_NATIVE:
     case COB_TYPE_NUMERIC_PACKED:
       /* not optimized */
       cob_decimal_set_field (&cob_d1, f);
